# biomapper2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  dev_guidelines.md  progress.md  pyproject.toml
.claude/commands/: pr-prep.md
.github/workflows/: ci.yml  deploy-api.yml  deploy-dev.yml  mirror-sync.yml  test.yml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
data/examples/: metabolites_synthetic.tsv  metabolites_synthetic_partial_provided.tsv
data/examples/synthetic_stats/: datasetA_metabolites_MAPPED_a_summary_stats.json  datasetA_proteins_MAPPED_a_summary_stats.json  datasetB_metabolites_MAPPED_a_summary_stats.json  datasetC_proteins_MAPPED_a_summary_stats.json
deploy/: biomapper2-api.service  biomapper2-dev-api.service
docs/: CONTRIBUTING.md  contribution_guidelines.md  visualizer.md
docs/solutions/best-practices/: cross-repo-dynamic-api-integration-2026-05-27.md
docs/solutions/build-errors/: equivalent-ids-prefix-mismatch-and-ci-type-error-2026-04-29.md
docs/solutions/integration-issues/: human-gene-symbols-resolve-to-wrong-species-orthologs-2026-06-15.md
examples/: basic_dataset_kg_mapping.py  basic_entity_kg_mapping.py  basic_kg_mapping.py  metabolomics_workbench_demo.ipynb
scripts/: check.sh  prep_milestone_datasets.py  run_milestone_datasets.py
src/biomapper2/: annotator.py  biolink_client.py  config.py  kg_mapper.py  linker.py  mapper.py  models.py  normalizer.py  resolver.py  utils.py  visualizer.py
src/biomapper2/api/: auth.py  kestrel_discovery.py  main.py
src/biomapper2/api/models/: __init__.py  requests.py  responses.py
src/biomapper2/api/routes/: discovery.py  mapping.py
src/biomapper2/core/: analysis.py  annotation_engine.py  annotator.py  gene_symbol_resolver.py  linker.py  normalizer.py  resolver.py
src/biomapper2/core/annotators/: base.py  kestrel_hybrid.py  kestrel_text.py  kestrel_vector.py  (+1 more)
tests/: conftest.py  test_annotation_engine_canonical.py  test_api.py  test_api_unit.py  test_batching.py  test_canonical_namespace_gold_set.py  test_dataset_analysis.py  test_dataset_kg_mapping.py  test_entity_kg_mapping.py  test_entity_model.py  test_equivalent_ids.py  test_example_scripts.py  test_gene_symbol_resolver.py  test_human_gene_gold_set.py  test_kestrel_discovery.py  test_kestrel_discovery_integration.py  test_kestrel_hybrid_canonical.py  test_kestrel_hybrid_fallback.py  test_kestrel_hybrid_selection.py  test_kg_mapper.py  test_metabolomics_workbench.py  test_normalizer.py  test_prefer_human_threading.py  test_validators_kraken.py  test_visualizer.py
(+5 files in other folders)
