[project]
name = "biomapper2"
version = "0.1.0"
description = "Unified toolkit for multiomics data harmonization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "bmt>=1.4.6",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rdkit>=2025.9.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "requests-cache>=1.2.1",
    "circuitbreaker>=2.1.3",
    "inflect>=7.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biomapper2"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ipykernel>=7.1.0",
    "pandas-stubs>=2.3.2.250926",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "ruff>=0.14.6",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (PEP 8 style issues)
    "F",   # pyflakes (undefined names, unused imports, etc.)
    "I",   # isort (import sorting)
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade (modernize Python syntax like old-style type hints)
]

[tool.ruff.lint.isort]
known-first-party = ["biomapper2"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "external: tests that depend on third-party APIs we don't control",
]
